-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.13.1
-
None
-
-
ce7c431fb23157fa5125d1102a594de045818a72 (qt/qtquickcontrols2/5.12)
https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/261393 Merge remote-tracking branch 'origin/5.12' into 5.13
https://testresults.qt.io/coin/integration/qt/qtquickcontrols2/tasks/1559504328
agent:2019/06/02 19:24:06 build.go:197: /Users/qt/work/qt/qtquickcontrols2/tests/auto/calendar/target_wrapper.sh ./tst_calendar -o /Users/qt/work/testresults/tests/auto/calendar143271627,xml -o -,txt
agent:2019/06/02 19:24:06 build.go:197: ********* Start testing of tst_calendar *********
agent:2019/06/02 19:24:06 build.go:197: Config: Using QtTest library 5.13.0, Qt 5.13.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 9.0.0 (clang-900.0.39.2) (Apple))
agent:2019/06/02 19:24:06 build.go:197: PASS : tst_calendar::CalendarModel::initTestCase()
...
agent:2019/06/02 19:24:46 build.go:197: PASS : tst_controls::Default::SplitView::test_insertRemoveItems(insertItemAtHorizontalBeginning)
agent:2019/06/02 19:24:46 build.go:197: make: *** [check] Segmentation fault: 11
agent:2019/06/02 19:24:46 build.go:230: Process finished with error: exit status 2
agent:2019/06/02 19:24:46 build.go:200: Error reading from stdout/err: exit status 2
PASS : tst_controls::Default::SplitView::test_insertRemoveItems(insertItemAtHorizontalBeginning)
AddressSanitizer:DEADLYSIGNAL
=================================================================
==37536==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000008 (pc 0x000113caef2f bp 0x7ffeebbbbeb0 sp 0x7ffeebbbbd20 T0)
==37536==The signal is caused by a READ memory access.
==37536==Hint: address points to the zero page.
#0 0x113caef2e in QQuickSplitView::itemMoved(int, QQuickItem*) (QtQuickTemplates2:x86_64+0x144f2e)
#1 0x113bb3b2a in QQuickContainerPrivate::removeItem(int, QQuickItem*) (QtQuickTemplates2:x86_64+0x49b2a)
#2 0x113bb6f60 in QQuickContainer::removeItem(QVariant const&) (QtQuickTemplates2:x86_64+0x4cf60)
#3 0x113bba0e2 in QQuickContainer::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (QtQuickTemplates2:x86_64+0x500e2)
#4 0x113bbb659 in QQuickContainer::qt_metacall(QMetaObject::Call, int, void**) (QtQuickTemplates2:x86_64+0x51659)
#5 0x113cb3d77 in QQuickSplitView::qt_metacall(QMetaObject::Call, int, void**) (QtQuickTemplates2:x86_64+0x149d77)
#6 0x106c21cb5 in QQmlObjectOrGadget::metacall(QMetaObject::Call, int, void**) const (QtQml:x86_64+0x833cb5)
#7 0x10681b17e in CallMethod(QQmlObjectOrGadget const&, int, int, int, int*, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) (QtQml:x86_64+0x42d17e)
#8 0x10680e30a in CallPrecise(QQmlObjectOrGadget const&, QQmlPropertyData const&, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) (QtQml:x86_64+0x42030a)
#9 0x10680c370 in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const (QtQml:x86_64+0x41e370)
#10 0x10685eb29 in QV4::Moth::VME::interpret(QV4::CppStackFrame*, QV4::ExecutionEngine*, char const*) (QtQml:x86_64+0x470b29)
#11 0x10685921a in QV4::Moth::VME::exec(QV4::CppStackFrame*, QV4::ExecutionEngine*) (QtQml:x86_64+0x46b21a)
#12 0x10671bd29 in QV4::ArrowFunction::virtualCall(QV4::FunctionObject const*, QV4::Value const*, QV4::Value const*, int) (QtQml:x86_64+0x32dd29)
#13 0x106a416d4 in QV4::Runtime::method_callElement(QV4::ExecutionEngine*, QV4::Value*, QV4::Value const&, QV4::Value*, int) (QtQml:x86_64+0x6536d4)
#14 0x11a0a8892 (<unknown module>)
#15 0x106859380 in QV4::Moth::VME::exec(QV4::CppStackFrame*, QV4::ExecutionEngine*) (QtQml:x86_64+0x46b380)
#16 0x10671bd29 in QV4::ArrowFunction::virtualCall(QV4::FunctionObject const*, QV4::Value const*, QV4::Value const*, int) (QtQml:x86_64+0x32dd29)
#17 0x106a3ee22 in QV4::Runtime::method_callQmlContextPropertyLookup(QV4::ExecutionEngine*, unsigned int, QV4::Value*, int) (QtQml:x86_64+0x650e22)
#18 0x11a0fdd95 (<unknown module>)
#19 0x106859380 in QV4::Moth::VME::exec(QV4::CppStackFrame*, QV4::ExecutionEngine*) (QtQml:x86_64+0x46b380)
#20 0x10671bd29 in QV4::ArrowFunction::virtualCall(QV4::FunctionObject const*, QV4::Value const*, QV4::Value const*, int) (QtQml:x86_64+0x32dd29)
#21 0x106a3ee22 in QV4::Runtime::method_callQmlContextPropertyLookup(QV4::ExecutionEngine*, unsigned int, QV4::Value*, int) (QtQml:x86_64+0x650e22)
#22 0x10685e5ba in QV4::Moth::VME::interpret(QV4::CppStackFrame*, QV4::ExecutionEngine*, char const*) (QtQml:x86_64+0x4705ba)
#23 0x10685921a in QV4::Moth::VME::exec(QV4::CppStackFrame*, QV4::ExecutionEngine*) (QtQml:x86_64+0x46b21a)
#24 0x10671bd29 in QV4::ArrowFunction::virtualCall(QV4::FunctionObject const*, QV4::Value const*, QV4::Value const*, int) (QtQml:x86_64+0x32dd29)
#25 0x106a3ee22 in QV4::Runtime::method_callQmlContextPropertyLookup(QV4::ExecutionEngine*, unsigned int, QV4::Value*, int) (QtQml:x86_64+0x650e22)
#26 0x10685e5ba in QV4::Moth::VME::interpret(QV4::CppStackFrame*, QV4::ExecutionEngine*, char const*) (QtQml:x86_64+0x4705ba)
#27 0x10685921a in QV4::Moth::VME::exec(QV4::CppStackFrame*, QV4::ExecutionEngine*) (QtQml:x86_64+0x46b21a)
#28 0x10670e57d in QV4::Function::call(QV4::Value const*, QV4::Value const*, int, QV4::ExecutionContext const*) (QtQml:x86_64+0x32057d)
#29 0x106c8fff8 in QQmlJavaScriptExpression::evaluate(QV4::CallData*, bool*) (QtQml:x86_64+0x8a1ff8)
#30 0x106b31fca in QQmlBoundSignalExpression::evaluate(void**) (QtQml:x86_64+0x743fca)
#31 0x106b33f96 in QQmlBoundSignal_callback(QQmlNotifierEndpoint*, void**) (QtQml:x86_64+0x745f96)
#32 0x106c30fa6 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) (QtQml:x86_64+0x842fa6)
#33 0x106ac0f71 in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) (QtQml:x86_64+0x6d2f71)
#34 0x1080c80d2 in QMetaObject::activate(QObject*, int, int, void**) (QtCore:x86_64+0x7390d2)
#35 0x106aa660e in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) (QtQml:x86_64+0x6b860e)
#36 0x106aa19e5 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) (QtQml:x86_64+0x6b39e5)
#37 0x106cb08e8 in GenericBinding<1>::write(QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>) (QtQml:x86_64+0x8c28e8)
#38 0x106cae5dd in QQmlNonbindingBinding::doUpdate(QQmlJavaScriptExpression::DeleteWatcher const&, QFlags<QQmlPropertyData::WriteFlag>, QV4::Scope&) (QtQml:x86_64+0x8c05dd)
#39 0x106ca6177 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) (QtQml:x86_64+0x8b8177)
#40 0x106c30fa6 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) (QtQml:x86_64+0x842fa6)
#41 0x106ac0f71 in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) (QtQml:x86_64+0x6d2f71)
#42 0x1080c80d2 in QMetaObject::activate(QObject*, int, int, void**) (QtCore:x86_64+0x7390d2)
#43 0x106aa660e in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) (QtQml:x86_64+0x6b860e)
#44 0x106aa19e5 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) (QtQml:x86_64+0x6b39e5)
#45 0x106cb08e8 in GenericBinding<1>::write(QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>) (QtQml:x86_64+0x8c28e8)
#46 0x106cae5dd in QQmlNonbindingBinding::doUpdate(QQmlJavaScriptExpression::DeleteWatcher const&, QFlags<QQmlPropertyData::WriteFlag>, QV4::Scope&) (QtQml:x86_64+0x8c05dd)
#47 0x106ca6177 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) (QtQml:x86_64+0x8b8177)
#48 0x106c30fa6 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) (QtQml:x86_64+0x842fa6)
#49 0x106ac0f71 in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) (QtQml:x86_64+0x6d2f71)
#50 0x1080c80d2 in QMetaObject::activate(QObject*, int, int, void**) (QtCore:x86_64+0x7390d2)
#51 0x1080e75a8 in QSingleShotTimer::timerEvent(QTimerEvent*) (QtCore:x86_64+0x7585a8)
#52 0x1080af24a in QObject::event(QEvent*) (QtCore:x86_64+0x72024a)
#53 0x10801cfd7 in QCoreApplicationPrivate::notify_helper(QObject*, QEvent*) (QtCore:x86_64+0x68dfd7)
#54 0x10801c159 in QCoreApplication::notify(QObject*, QEvent*) (QtCore:x86_64+0x68d159)
#55 0x10801bd5c in QCoreApplication::notifyInternal2(QObject*, QEvent*) (QtCore:x86_64+0x68cd5c)
#56 0x10815e910 in QTimerInfoList::activateTimers() (QtCore:x86_64+0x7cf910)
#57 0x10fe76c11 in QCocoaEventDispatcherPrivate::activateTimersSourceCallback(void*) (libqcocoa.dylib:x86_64+0x90c11)
#58 0x7fff318e2082 in __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ (CoreFoundation:x86_64h+0x58082)
#59 0x7fff318e2028 in __CFRunLoopDoSource0 (CoreFoundation:x86_64h+0x58028)
#60 0x7fff318c59ea in __CFRunLoopDoSources0 (CoreFoundation:x86_64h+0x3b9ea)
#61 0x7fff318c4fb4 in __CFRunLoopRun (CoreFoundation:x86_64h+0x3afb4)
#62 0x7fff318c48bd in CFRunLoopRunSpecific (CoreFoundation:x86_64h+0x3a8bd)
#63 0x7fff30bb096a in RunCurrentEventLoopInMode (HIToolbox:x86_64+0xa96a)
#64 0x7fff30bb06a4 in ReceiveNextEventCommon (HIToolbox:x86_64+0xa6a4)
#65 0x7fff30bb0435 in _BlockUntilNextEventMatchingListInModeWithFilter (HIToolbox:x86_64+0xa435)
#66 0x7fff2ef4a986 in _DPSNextEvent (AppKit:x86_64+0x1a986)
#67 0x7fff2ef4971e in -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] (AppKit:x86_64+0x1971e)
#68 0x7fff2ef4383b in -[NSApplication run] (AppKit:x86_64+0x1383b)
#69 0x10fe795ab in QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (libqcocoa.dylib:x86_64+0x935ab)
#70 0x10800ba46 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (QtCore:x86_64+0x67ca46)
#71 0x104051422 in quick_test_main_with_setup(int, char**, char const*, char const*, QObject*) (QtQuickTest:x86_64+0xe422)
#72 0x10403a31e in main tst_default.cpp:43
#73 0x7fff5d7f33d4 in start (libdyld.dylib:x86_64+0x163d4)
==37536==Register values:
rax = 0x0000100000000001 rbx = 0x00007ffeebbbbe20 rcx = 0x0000100000000000 rdx = 0x0000000000000000
rdi = 0x0000000000000008 rsi = 0x0000000000000002 rbp = 0x00007ffeebbbbeb0 rsp = 0x00007ffeebbbbd20
r8 = 0x0000100000000000 r9 = 0x0000100000000000 r10 = 0x00006020000b1e70 r11 = 0x00007ffeebbbb940
r12 = 0x00007ffeebbbbd20 r13 = 0x0000000000000000 r14 = 0x00001fffdd7777a4 r15 = 0x0000616000103580
AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV (QtQuickTemplates2:x86_64+0x144f2e) in QQuickSplitView::itemMoved(int, QQuickItem*)
==37536==ABORTING
14:18:17: The program has unexpectedly finished.
14:18:17: The process was ended forcefully.
14:18:17: /Users/mitch/dev/qt5.13-fw/qtquickcontrols2/tests/auto/controls/default/tst_default crashed.