Fix crash in QQuickContainerPrivate::removeItem

The count variable should be updated after removing the item.

Fixes: QTBUG-76164
Change-Id: I141d720ffaa890002d98a7d2448adca9a7d7d2f3
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>