src/quicktemplates2/qquickcontainer.cpp
@@ -306,6 +306,7 @@ void QQuickContainerPrivate::removeItem(int index, QQuickItem *item)
     QQuickItemPrivate::get(item)->removeItemChangeListener(this, changeTypes);
     item->setParentItem(nullptr);
     contentModel->remove(index);
+    --count;
 
     q->itemRemoved(index, item);
 
